Added many visual changes

--- a/estructura.html
+++ b/estructura.html
@@ -17,11 +17,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
-    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/excited_to_transform.css">
     <link rel="stylesheet" href="css/estructura.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
@@ -57,15 +58,14 @@
         <a href="investigacion.html"><div class="circleLink" id="investigation"></div></a>
       </div>
     </section>
-  <section id="info" class="intern maxWidth mt-0">
+  <section id="info" class="intern mt-0">
     <div id='emotionHeader'>
-      <div class="title">
-        <img src='img/pisoton/NosEmociona-01.png'/>
+        <div class="title">
+          <h2> Nos Emociona Transformar</h2>
+        </div>
+        <div class="imageDesc">
+        </div>
       </div>
-      <div class="imageDesc">
-        <img src='img/pisoton/organigrama.png'/>
-      </div>
-    </div>
     <article class="width800">
       <div class="descBig">
         Mediante técnicas lúdico-educativas: cuento, dibujos animados, psicodrama, juego, relato vivencial; facilitamos a niños y pre adolescentes la expresión de emociones, el auto- conocimiento, el manejo adecuado de conflictos y el reconocimiento y re significación de sus historias de vida.
