--- a/formacion.html
+++ b/formacion.html
@@ -16,9 +16,13 @@
     <title></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
+    <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/formacion.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -45,24 +49,18 @@
         <p> Maestros, agentes educativos y tutores </p>
       </a>
     </navbar>
+    <section id="dataEmotion">
+      <div id="dataEmotionHeader" class="my-4">
+        <a href="estructura.html"><div class="circleLink" id="structure"></div></a>
+        <a href="programa.html"><div class="circleLink" id="program"></div></a>
+        <a href="formacion.html"><div class="circleLink active" id="formation"></div></a>
+        <a href="investigacion.html"><div class="circleLink" id="investigation"></div></a>
+      </div>
+    </section>
   <section id="videos" class="intern">
     <article class="internTopMsg">
       Entre todos podemos ayudar a transformar e impactar con alegría muchas vidas.
     </article>
-    <!--<div id='blogSliderWrapper'>
-      <div id='blogSlider'>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Fotos lo que somos 1</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-        <div class='blogSliderBox'><img src='img/ninos/back_games.png'/><p class='desc'>Lorem Ipsum - Lorem Ipsum</p></div>
-      </div>
-    </div>
-    <a href='#' class='btn' id='loadMoreVideos'>Ver más</a>-->
   </section>
   <section id="info" class="intern maxWidth">
     <div class="textAndImg" style="margin-top:100px;">
@@ -72,7 +70,7 @@
         <p class="desc">El proceso de crecimiento de los niños y niñas no depende solo de ellos, sino también de los adultos que los rodean, por lo cual no es posible pensar en un programa que apunte hacia su emocionalidad sin integrar a quienes los acompañan, por eso proponemos una formación que brinde un conocimiento que permita facilitar el adecuado desarrollo psicoafectivo de la infancia.</p>
       </article>
     </div>
-    <div class="textAndText">
+    <div class="textAndText mt-md-5">
       <article>
         <p class="textAndImageTitle">Diplomado en Desarrollo Psicoafectivo y Educación Emocional</p>
         <p class="desc">Profesionales del área de la educación, ciencias de la salud, ciencias sociales y humanas. Maestros, agentes educativos y madres comunitarias.</br></br>
@@ -103,7 +101,7 @@
     </div>
     <div id='blogImageSliderWrapper'>
       <div id='blogImageSlider'>
-        <div class='blogImageSliderBox'><img src='img/pisoton/AGENTES_GRADUADOS_SEGUNDA_FOTO.JPG'/></div>
+        <div class='blogImageSliderBox'><img src='img/pisoton/AGENTES_GRADUADOS_SEGUNDA_FOTO.JPG' style='cursor: default;' /></div>
       </div>
     </div>
     <article class="width800">
@@ -113,61 +111,12 @@
     </article>
     <div class="quotesWrapper">
       <article>
-        <p class="quote1">“Pisotón me ha cambiado mucho como persona y profesional, yo antes era muy autoritaria y como malgeniada con los niños porque así había aprendido. Ahora al tener más oportunidad de escucharlos creo que los entiendo más, soy más suave y sensible con ellos y me va mucho mejor, disfruto más el trabajo con ellos y ellos me quieren más” (Elizabeth Cucaita Gómez, Agente educativa, Facatativá).</p>
+        <p class="quote1">“Pisotón me ha cambiado mucho como persona y profesional, yo antes era muy autoritaria y como malgeniada con los niños porque así había aprendido. Ahora al tener más oportunidad de escucharlos creo que los entiendo más, soy más suave y sensible con ellos y me va mucho mejor, disfruto más el trabajo con ellos y ellos me quieren más” - <br> <em> Elizabeth Cucaita Gómez, Agente educativa, Facatativá . </em> </p>
       </article>
       <article>
-        <p class="quote1">“Ser docente también se trata de aprender a ser mejores seres humanos, porque nosotros cometemos errores muchas veces y es importante que pidamos perdón y busquemos la manera de enmendar y solucionar el asunto unidos. Ser docentes es un trabajo grande, no solo en la parte académica, sino también en la humana”. (Miryam Imbacoan, maestra, Villa Garzón, Putumayo).</p>
+        <p class="quote1">“Ser docente también se trata de aprender a ser mejores seres humanos, porque nosotros cometemos errores muchas veces y es importante que pidamos perdón y busquemos la manera de enmendar y solucionar el asunto unidos. Ser docentes es un trabajo grande, no solo en la parte académica, sino también en la humana”. <br> <em> Miryam Imbacoan, maestra, Villa Garzón, Putumayo .</em></p>
       </article>
     </div>
-    <!--<div class="quotesWrapper">
-      <article>
-        <p class="desc">Cita 3 cita 3 cita 3 cita 3 cita 3 cita 3</p>
-      </article>
-    </div>-->
-  </section>
-
-  <section id="moreInfo">
-    <!--<div class="wrapper" class="maxWidth">
-      <div>
-        <h4><a href="index.html">Niños</a></h4>
-      </div>
-      <div>
-        <h4><a href="padres.php">Padres</a></h4>
-        <ul>
-          <li><a href="padres.php#blog">Video Blog</a></li>
-          <li><a href="padres.php#articles">Artículos</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4><a href="maestros.html">Maestros</a></h4>
-        <ul>
-          <li><a href="maestros.html#blog">Video Blog</a></li>
-          <li><a href="maestros.html#articles">Artículos</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4><a href="pisoton.html">Pisotón</a></h4>
-        <ul>
-          <li><a href="pisoton.html#articles">Artículos</a></li>
-          <li><a href="pisoton.html#cronology">Cronología</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4>Newsletter</h4>
-        <p>Suscríbete para recibir más información</p>
-        <span>
-          <input type ="text" placeholder="Email"></input>
-          <img src="img/ninos/telegram.jpg"/>
-        </span>
-        <div id="networks">
-          <img src="img/ninos/facebook_icon.png" alt="facebook">
-          <img src="img/ninos/twitter_icon.png" alt="twitter">
-          <img src="img/ninos/feeds_icon.png" alt="feeds">
-          <img src="img/ninos/instagram_icon.png" alt="instagram">
-          <img src="img/ninos/google_icon.png" alt="google">
-        </div>
-      </div>
-    </div>-->
   </section>
   <footer>
     <div class="footerWrapper">
