--- a/nos_emociona_transformar.html
+++ b/nos_emociona_transformar.html
@@ -57,22 +57,20 @@
       <div class="imageDesc">
       </div>
     </div>
-    <article class="emotion-row leftAlign my-5">
-      <p class="quote1 mr-lg-5 pr-md-5">Trabajamos por, con y para la infancia</p>
-      <p class="desc">Estamos comprometidos con la construcción del ser, trabajamos por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
-    </article>
+    <article class="emotion-row leftAlign my-5 pt-lg-5">
+      <p class="quote1 mx-auto">Trabajamos por, con y para la infancia</p> </article>
     <!--<video id="videoBlog" controls src="video/ninos/Teaser_ENSUB_Las-aventuras-de-Ugo-y-Ema.mov" poster="img/padres/blog_poster.png">
       Your browser does not support the video tag.
     </video>-->
   </section>
-  <section id="dataEmotion" class="maxWidth">
+  <section id="dataEmotion" class="maxWidth mt-3">
     <div id="dataEmotionHeader" class="my-4">
       <a href="estructura.html"><div class="circleLink" id="structure"></div></a>
       <a href="programa.html"><div class="circleLink" id="program"></div></a>
       <a href="formacion.html"><div class="circleLink" id="formation"></div></a>
       <a href="investigacion.html"><div class="circleLink" id="investigation"></div></a>
     </div>
-    <article class="px-4">
+    <article>
       <div class="mapWrapper">
         <div class="hearts-reached my-2">
           <h2> Corazones que hemos tocado</h2>
