--- a/pisoton.html
+++ b/pisoton.html
@@ -61,7 +61,7 @@
   <section class="weAre">
     <div class="d-flex justify-content-center align-items-center flex-wrap py-5 px-3 my-1 mt-md-5">
       <h2 class="mr-3 mr-md-5 my-3"> Lo que somos</h2>
-      <p>Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
+      <p>Somos un equipo humano comprometido con la construcción del ser, que trabaja por la infancia y la adolescencia, facilitando el conocimiento del desarrollo psicoafectivo, la aceptación y la regulación de las emociones en niños y niñas, padres y maestros, para contribuir a la armonía, el bienestar y la transformación social.</p>
     </div>
     <div class="who-we-are d-flex justify-content-center flex-wrap flex-md-nowrap">
         <a class="pr-5 mb-3" href="nos_emociona_transformar.html"><img src="img/pisoton/elementos-08.png" alt="Nos emociona educar"></a>
