--- a/programa.html
+++ b/programa.html
@@ -16,9 +16,13 @@
     <title></title>
     <meta name="viewport" content="width=device-width, user-scalable=no" >
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
+    <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/programa.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -46,13 +50,21 @@
       </a>
     </navbar>
   <!--</section>-->
+  <section id="dataEmotion">
+    <div id="dataEmotionHeader" class="my-4">
+      <a href="estructura.html"><div class="circleLink " id="structure"></div></a>
+      <a href="programa.html"><div class="circleLink active" id="program"></div></a>
+      <a href="formacion.html"><div class="circleLink" id="formation"></div></a>
+      <a href="investigacion.html"><div class="circleLink" id="investigation"></div></a>
+    </div>
+  </section>
   <section id="videos" class="intern">
     <!--<h4>Para qué lo hacemos</h4>-->
     <article class="internTopMsg">
       Si miramos de cerca al niño, solo tenemos que guiar al adolescente y observar con satisfacción al adulto.
     </article>
   </section>
-  <section id="info" class="intern maxWidth">
+  <section id="info" class="intern maxWidth mb-5">
     <div class="textAndImg">
       <article>
         <p class="textAndImageTitle">Primera</br> Infancia</p>
